feat(ai): implement web worker-based AI search with search control and performance monitoring
- Added web worker architecture for AI search to prevent UI blocking
- Implemented search control with start/stop functionality and real-time progress updates
- Added performance monitoring with node count, PVS cuts, and search time tracking
- Integrated worker communication for search requests and result handling
- Enhanced UI with search status display and stop search button

BREAKING CHANGE: AI search now runs in a separate web worker thread, changing the search execution model

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <div class="controls">
                     <button id="newGameBtn">New Game</button>
                     <button id="undoBtn">Undo Move</button>
+                    <button id="stopSearchBtn">Stop Search</button>
                     <label for="difficulty">Difficulty:</label>
                     <select id="difficulty">
                         <option value="1">Easy (Depth 1)</option>
