feat(ai): implement advanced move ordering with killer moves and history heuristics
- Added killer moves array for move ordering at each depth to prioritize moves that cause cutoffs
- Implemented history heuristic table to track and prioritize successful moves across the search tree
- Enhanced move ordering function with comprehensive scoring system including:
  * Transposition table move prioritization
  * Killer move bonuses with depth-based scoring
  * History heuristic values for move ordering
  * MVV-LVA (Most Valuable Victim, Least Valuable Attacker) capture ordering
  * Increased bonuses for checks and center control
- Added updateHistory() function to increment history scores on cutoffs with overflow protection
- Added updateKillers() function to maintain killer move list excluding captures and promotions
- Implemented quiescence search to handle horizon effect with tactical move filtering
- Added null move pruning for non-maximizing side to reduce search tree size
- Enhanced transposition table with better replacement strategy prioritizing exact entries and depth
- Added table size limiting to prevent memory issues with automatic cleanup
- Improved evaluation function with advanced features:
  * Pawn structure evaluation
  * Piece activity scoring
  * King safety assessment
  * Mobility calculation
  * Endgame king activity bonuses
- Added fallback synchronous search function for worker failure scenarios
- Implemented high-depth AI performance testing with keyboard shortcut (Ctrl+T)
- Enhanced board copying for better performance with direct array manipulation
- Added comprehensive performance monitoring and status updates

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     <input type="number" id="customDepth" min="1" max="10" value="4">
                     <label for="usePVS">Use PVS:</label>
                     <input type="checkbox" id="usePVS" checked>
+                    <label for="useNNUE">Use NNUE:</label>
+                    <input type="checkbox" id="useNNUE">
+                    <label for="nnueFile">NNUE Weights:</label>
+                    <input type="file" id="nnueFile" accept=".nnue,.bin">
                     <button id="applySettingsBtn">Apply Settings</button>
                 </div>
             </div>
